<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/s4_guide"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/customborder"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/SignUpName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Login"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/LoginText2" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_Login" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/LoginText2" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_Password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:background="@drawable/blackbtn"
                android:text="@string/btn_Login"
                android:textColor="@color/LoginText" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_marginLeft="5dp"
                android:background="@drawable/blackbtn"
                android:text="@string/btn_Register"
                android:textColor="@color/LoginText" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>