<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/light"
    tools:context="${relativePackage}.${activityClass}" >
    <!--   -->
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/topseller"
        android:textAppearance="?android:attr/textAppearanceLarge" />

<android.support.v4.view.ViewPager
    android:id="@+id/myviewpager"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:layout_below="@id/textView1"
    android:layout_gravity="center"
    android:overScrollMode="never" >

</android.support.v4.view.ViewPager>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myviewpager"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/btn_SearchABook"
        android:background="@drawable/blackbtn"
        android:textColor="@color/LoginText" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/blackbtn"
        android:text="@string/btn_MyBookFavourites"
        android:textColor="@color/LoginText" />
    
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/blackbtn"
        android:text="@string/btn_MyWishList"
        android:textColor="@color/LoginText" />

</RelativeLayout>
